--- a/css/burger-menu.css
+++ b/css/burger-menu.css
@@ -1,6 +1,3 @@
-
-
-
 /*===================== ATOLLA =========================*/
 
 .at-menu {
@@ -21,8 +18,7 @@
     /*отступы между кнопками*/
 }
 
-@media (max-width:1200px) {
-
+@media (max-width: 992px) {
     .at-menu {
         position: relative;
         position: fixed;
@@ -35,12 +31,12 @@
         display: block;
         text-align: center;
         width: 100%;
-        transform: translatey(-100%);
+        top: 18px;
+        transform: translatey(-150%);
         /*напрвление движения*/
         transition: transform 0.6s ease-in-out;
         z-index: 998;
-        background-color: #fff;
-        padding: 60px 0 20px;
+        background-color: #fffdfa;
     }
 
     .at-menu.at-menu-toggle .at-menu__list {
@@ -58,7 +54,6 @@
         padding: 20px 0;
     }
 
-
     /*---Анимация кнопки--*/
 
     .at-menu__btn {
@@ -67,7 +62,7 @@
         height: 19px;
         position: fixed;
         right: 4%;
-        top: 4%;
+        top: 3%;
         padding: 0;
         z-index: 999;
     }
@@ -137,6 +132,4 @@
     .at-menu.at-menu-toggle .at-menu__line::after {
         transition-property: bottom, transform;
     }
-
-
 }
