--- a/css/style.css
+++ b/css/style.css
@@ -215,8 +215,8 @@ body {
 }
 
 .services__img {
-    max-width: 408px;
-    margin-bottom: 40px;
+    max-width: 100%;
+    margin-bottom: auto;
 }
 
 .services__name {
@@ -368,7 +368,7 @@ body {
 
 .catalog__btns {
     margin-left: auto;
-    width: 163px;
+    width: 153px;
     border-radius: 4px;
     background-color: #6e6362;
     grid-column: 2 / 3;
@@ -458,4 +458,254 @@ body {
 
 .footer__social-icon:hover {
     transform: scale(1.3);
+}
+
+@media screen and (max-width: 1200px) {
+    .catalog__doors > .slick-list {
+        margin: 0;
+    }
+
+    .catalog__door {
+        margin: 0 70px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .header {
+        padding: 28px 0;
+    }
+
+    .header__logo {
+        width: 70px;
+        margin: 0 auto;
+    }
+
+    .header__phone-ad {
+        display: none;
+    }
+
+    .header__phone {
+        justify-content: center;
+    }
+
+    .at-menu__item {
+        font-size: 18px;
+    }
+
+    .at-menu__item-phone {
+        padding-top: 30px;
+        padding-bottom: 30px;
+        font-size: 24px;
+    }
+
+    .head__slide {
+        background-size: 25%;
+    }
+
+    .catalog__door {
+        margin: 0 100px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .head__slide {
+        background-image: unset !important;
+        display: flex !important;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        padding-right: 72px;
+    }
+
+    .head__title {
+        font-size: 48px;
+    }
+
+    .slickPrev {
+        right: 0 !important;
+        left: 72px;
+        bottom: 25px !important;
+    }
+
+    .slickNext {
+        bottom: 27px !important;
+    }
+
+    .services {
+        padding-bottom: 0;
+    }
+
+    .services__items {
+        flex-direction: column;
+    }
+
+    .services__img {
+        margin: 0 auto;
+        max-width: 57%;
+        margin-bottom: 20px;
+    }
+
+    .services__item {
+        height: auto;
+        text-align: center;
+        border: none;
+    }
+
+    .services__name {
+        padding-left: 0;
+        font-size: 36px;
+    }
+
+    .services__text {
+        font-size: 24px;
+        padding-left: 0;
+        max-width: unset !important;
+    }
+
+    .help {
+        background-image: none !important;
+    }
+
+    .help > .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .help__subtitle {
+        font-size: 24px;
+    }
+
+    .help__btn {
+        font-size: 18px;
+        max-width: unset !important;
+    }
+
+    .catalog__doors > .slick-list {
+        margin: 0 150px !important;
+    }
+
+    .catalog__door {
+        margin: 0 70px;
+    }
+
+    .catalog__prices {
+        font-size: 36px;
+    }
+
+    .catalog__btns {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .catalog__doors > .slick-list {
+        margin: 0 !important;
+    }
+
+    .catalog__door {
+        max-width: unset;
+        width: auto;
+        margin: 0 70px;
+    }
+
+    .slick-prev {
+        top: 30%;
+    }
+
+    .slick-next {
+        top: 30%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .head__slide {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    .head__title {
+        font-size: 36px;
+    }
+
+    .head__btn {
+        font-size: 18px;
+    }
+
+    .services__img {
+        max-width: 90%;
+    }
+
+    .help {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    .help__title {
+        font-size: 28px;
+    }
+
+    .help__subtitle {
+        font-size: 20px;
+    }
+
+    .catalog__btns {
+        width: 100px;
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .head__title {
+        font-size: 24px;
+    }
+
+    .head__text {
+        font-size: 14px;
+    }
+
+    .head__btn {
+        text-transform: uppercase;
+        font-size: 14px;
+    }
+
+    .services__name {
+        font-size: 24px;
+    }
+
+    .services__text {
+        font-size: 16px;
+    }
+
+    .help__title {
+        font-size: 22px;
+    }
+
+    .help__subtitle {
+        font-size: 16px;
+    }
+
+    .help__btn {
+        font-size: 14px;
+    }
+
+    .catalog__title {
+        font-size: 36px;
+    }
+
+    .footer__items {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer__link {
+        font-size: 16px;
+    }
+
+    .footer__item:not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
 }
